# rotarex-dimes-srg-api

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
src/rotarex-dimes-srg-api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rotarex_api.egg-info/: PKG-INFO  SOURCES.txt
src/rotarex_dimes_srg_api/: __init__.py  api.py  models.py
src/rotarex_dimes_srg_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
