[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotarex-dimes-srg-api"
version = "0.1.6"
description = "Async Python client for Rotarex DIMES SRG API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
authors = [
  { name = "ROTAREX", email = "develop@rotarex.com" }
]
dependencies = [
  "aiohttp>=3.9.0"
]

[project.urls]
Homepage = "https://github.com/Rotarex/rotarex-dimes-srg-api"
Repository = "https://github.com/Rotarex/rotarex-dimes-srg-api"
Issues = "https://github.com/Rotarex/rotarex-dimes-srg-api/issues"
